--- a/CSS/style.css
+++ b/CSS/style.css
@@ -46,21 +46,25 @@ body {
     transition: color 250ms;
 }
 .nav__title,
-.nav__menu-link {
+.nav__menu-link,
+.nav__submenu-link {
     text-decoration: none;
     color: var(--text-color);
     cursor: pointer;
+    border: none;
+    background-color: transparent;
+    font-size: 16px;
 }
-.nav__menu-link:hover {
+.nav__menu-link:hover,
+.nav__submenu-item:hover {
     background-color: var(--nav);
     color: var(--background-color);
     transition: color 250ms;
-
 }
 .nav__title {
     font-weight: 900;
     font-size: 15px;
-    padding: 5%;
+    padding: 15px;
 }
 .nav__title:hover {
     color: var(--nav);
@@ -79,17 +83,39 @@ body {
 }
 .nav__menu-list--open {
     display: flex;
+    background-color: var(--background-color);
 }
 .nav__menu-item {
-    width: 100%;
+    min-width: 100%;
     cursor: pointer;
+    display: flex;
+    justify-content: space-around;
+}
+.nav__menu-link {
+    min-width: 50%;
+    max-width: 50%;
+    padding: 15px 0 15px 0;
+    text-align: center;
+    display: block;
+}
+.nav__menu--ramification {
+    text-align: center;
+}
+.nav__menu-item--reduction {
+    width: 50%;
+    align-self: start;
+    justify-content: center;
+}
+.nav_menu-link--modification {
+    align-items: center;
 }
 .nav__theme-switch {
-    padding: 2%;
+    padding: 15px 0 15px 0;
     display: flex;
     justify-content: center;
     transition: transform 150ms ease-in-out;
     cursor: pointer;
+    position: relative;
 }
 .theme-switch__toogle {
     -webkit-appearance: none;
@@ -101,15 +127,40 @@ body {
     position: absolute;
     white-space: nowrap; 
     width: 1px;
+    display: flex;
+}
+.theme-switch__icon {
+    position: relative;
+    z-index: 2;
 }
 .theme-switch__toogle:checked + .nav__theme-switch {
     transform: rotate(180deg);
 }
-.nav__menu-link {
-    width: 100%;
-    padding: 2%;
-    text-align: center;
-    display: block;
+.theme-switch--animation {
+    display: flex;
+    align-items: center;
+}
+.theme-switch--animation:hover::after {
+    animation: pulse 1000ms cubic-bezier(0.9, 0.7, 0.5, 0.9) infinite;
+    content: '';
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    background: purple;
+    border-radius: 50px;
+    z-index: 1;
+    align-items: center;
+    display: flex;
+    top: 15px;
+}
+@keyframes pulse {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        transform: scale(1.4);
+        opacity: 0.4;
+    }
 }
 .nav__toogle {
     width: 3rem;
@@ -182,51 +233,34 @@ body {
     top: 0;
     transform: rotate(-45deg);
     transition: top 0.2s 0.2s, transform 0.2s 0.2s linear;
-    
-
 }
 .nav--open .nav__bar::after {
     top: 0;
     transform: rotate(45deg);
     transition: top 0.2s 0.2s, transform 0.2s 0.2s linear;
-
 }
 .nav--open .nav__menu-item::hover {
     display: flex;
     align-items: center;
     justify-content: center;
 }
-@media only screen and (min-width: 412px) {
-    .nav__title {
-        padding: 0 5% 0 0;
-    }
-    .theme-switch__icon {
-        height: 15%;
-        width: 15%;
-    }
+.nav__submenu {
+    display: flex;
+    justify-content: end;
+    width: 100vw;
+    list-style: none;
+    flex-direction: column; 
 }
-@media only screen and (min-width: 500px) {
-    .theme-switch__icon {
-        height: 13%;
-        width: 13%;
-    }
+.nav__submenu-item {
+    text-align: center;
+    width: 100%;
 }
-@media only screen and (min-width: 767px) {
-    .theme-switch__icon {
-        height: 12%;
-        width: 12%;
-    }
+.nav__submenu-link {
+    text-align: center;
+    padding: 15px 0 15px 0;
 }
-@media only screen and (min-width: 900px) {
-    .theme-switch__icon {
-        height: 11%;
-        width: 11%;
-    }
-}
-@media only screen and (max-width: 1023px) {
-    .nav__menu-list--open {
-        background-color: var(--background-color);
-    }
+.nav__submenu-link:hover {
+    color: var(--background-color);
 }
 @media only screen and (min-width: 1024px) {
     .nav__menu-list {
@@ -255,57 +289,8 @@ body {
     .nav__toogle {
         display: none;
     }
-    .theme-switch__icon {
-        height: 30%;
-        width: 30%;
-    }
 }
-@media only screen and (min-width: 1280px) {
-    .nav__title {
-        padding-left: 170px;
-    }
-}
-@media only screen and (min-width: 1600px) {
-    .nav__title {
-        padding-left: 250px;
-    }
-}
-@media only screen and (min-width: 1920px) {
-    .nav__menu-link {
-        font-size: 19px;
-    }
-    .nav__title {
-        font-size: 22px;
-    }
-}
-@media only screen and (min-width: 2560px) {
-    .nav {
-        line-height: 50px;
-    }
-    .nav__title {
-        padding-left: 500px;
-    }
-    .nav__menu-link {
-        font-size: 25px;
-    }
-    .nav__title {
-        font-size: 28px;
-    }
-}
-@media only screen and (min-width: 3840px) {
-    .nav {
-        line-height: 80px;
-    }
-    .nav__title {
-        padding-left: 700px;
-    }
-    .nav__menu-link {
-        font-size: 35px;
-    }
-    .nav__title {
-        font-size: 40px;
-    }
-}
+
 
 
 
